// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DHMarkdown renders a component 1`] = `
<div
  node={
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "Link",
            },
          ],
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "properties": {
            "href": "https://example.com",
          },
          "tagName": "a",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    }
  }
  paragraph={true}
>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
    href="https://example.com"
    node={
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
            },
            "type": "text",
            "value": "Link",
          },
        ],
        "position": {
          "end": {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "properties": {
          "href": "https://example.com",
        },
        "tagName": "a",
        "type": "element",
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
  >
    Link
  </a>
</div>
`;

exports[`DHMarkdown renders h1 component 1`] = `
<div
  component="h1"
  gutterBottom={true}
  level={1}
  node={
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": {
        "end": {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "h1",
      "type": "element",
    }
  }
  variant="h4"
>
  Hello world!
</div>
`;

exports[`DHMarkdown renders h2 component 1`] = `
<div
  component="h2"
  gutterBottom={true}
  level={2}
  node={
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "h2",
      "type": "element",
    }
  }
  variant="h6"
>
  Hello world!
</div>
`;

exports[`DHMarkdown renders h3 component 1`] = `
<div
  gutterBottom={true}
  level={3}
  node={
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "h3",
      "type": "element",
    }
  }
  variant="subtitle1"
>
  Hello world!
</div>
`;

exports[`DHMarkdown renders h4 component 1`] = `
<div
  gutterBottom={true}
  level={4}
  node={
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "h4",
      "type": "element",
    }
  }
  paragraph={true}
  variant="caption"
>
  Hello world!
</div>
`;

exports[`DHMarkdown renders li component 1`] = `
<ul>
  

  <li
    checked={null}
    className="MuiBox-root css-1ue9tht"
    index={0}
    node={
      {
        "children": [
          {
            "position": {
              "end": {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "text",
            "value": "Item 1 - Item 2",
          },
        ],
        "position": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "properties": {},
        "tagName": "li",
        "type": "element",
      }
    }
    ordered={false}
  >
    Item 1 - Item 2
  </li>
  

</ul>
`;

exports[`DHMarkdown renders p component 1`] = `
<div
  node={
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": {},
      "tagName": "p",
      "type": "element",
    }
  }
  paragraph={true}
>
  Hello world!
</div>
`;
